# store_scrapper

./: README.md  dados_loja.csv  horario_de_funcionamento.csv  pyproject.toml
notebooks/: nbk_acha_periodos_de_operação.ipynb  nbk_busca_lojas_shopping_vitoria.ipynb
store_scrapper/periodo_de_operacao/: handler.py
store_scrapper/shopping_scrapper/: base.py
store_scrapper/shopping_scrapper/shopping_vitoria/: scrapper.py
